@@ -3,6 +3,7 @@
 	* mingw32/mingw32-gmp.xml: Add 5.1.2-1 release.
 	* mingw32/mingw32-mpfr.xml: Add 3.1.2-1 release.
 	* mingw32/mingw32-mpc.xml: Add 1.0.1-1 release.
+	* mingw32/mingw32-pthreads-w32.xml: Add 2.9.1-1 release.
 	* common/issue.log mingw32/issue.log: Update accordingly.
 	* .gitignore: Add .*.swp.
 
